# expense-tracker

./: .gitignore  CHANGELOG.md  Cargo.toml  HOOKS-README.md  README.md  ROADMAP.md  TODO  VCS-README.md  bump-version.sh  docs-template.md  generate-docs.sh  install-hooks.sh  knope.toml  pre-release.sh  release.sh  test.sh
.github/: COMMAND_DISPATCH_GUIDE.md  WORKFLOW_COMMAND_REFERENCE.md
.github/scripts/: setup-macos-latest.sh
.github/workflows/: audit.yaml  bump-version.yml  bump.yaml  check.yaml  command-dispatch.yaml  command-dispatch.yml  docs.yml  pr-title-check.yml  pre-release.yaml  pre-release.yml  release-docker.yml  release-github.yml  release.yaml  release.yml  test.yaml  test.yml
docs/: crates.js  help.html  index.html  settings.html  src-files.js
docs/expense_tracker/: all.html  index.html  sidebar-items.js
docs/expense_tracker/cli/: enum.Operation.html  fn.parse_sub_commands.html  fn.validate_amount.html  index.html  sidebar-items.js  struct.AddArgs.html  struct.ExpenseTrackerArgs.html  struct.FilterArgs.html
docs/expense_tracker/config/: constant.FILE_NAME.html  constant.TIME_FORMAT.html  index.html  sidebar-items.js
docs/expense_tracker/expense/: index.html  sidebar-items.js  struct.Expense.html  struct.ExpenseList.html
docs/expense_tracker/file_parser/: fn.read_file_content.html  index.html  sidebar-items.js
docs/expense_tracker/path/: fn.construct_file_path.html  fn.validate_file_path.html  index.html  sidebar-items.js
docs/search.index/: 06c78efdf74b.js  11d5e33083bf.js  12ad9702e520.js  160f09101ffe.js  199b1b99ca7b.js  307045d319ec.js  31cbc689655e.js  37572c3df71b.js  488dd4f3089b.js  4b27e1f90bb7.js  51fa738bc42f.js  64427f10acfc.js  66440d89b11f.js  673cccdf2c9e.js  7b73ccd95a7a.js  root.js
docs/search.index/crateNames/: ac7c0acc62f9.js
docs/search.index/desc/: 2ea8e395e9a0.js
docs/search.index/entry/: 92269c0fa1b5.js
docs/search.index/function/: 9b6592eefbdf.js
docs/search.index/generic_inverted_index/: 8ba17a90d9ba.js
docs/search.index/name/: f9b110f47502.js
docs/search.index/normalizedName/: e8d7328c1022.js
docs/search.index/path/: 773d7b3224db.js
docs/search.index/type/: 3ecd1e901bd8.js
docs/src/expense_tracker/: cli.rs.html  config.rs.html  expense.rs.html  file_parser.rs.html  lib.rs.html  path.rs.html
docs/trait.impl/clap_builder/derive/: trait.Args.js  trait.CommandFactory.js  trait.FromArgMatches.js  trait.Parser.js  trait.Subcommand.js
docs/trait.impl/core/default/: trait.Default.js
docs/trait.impl/core/fmt/: trait.Debug.js
docs/trait.impl/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js  trait.UnsafeUnpin.js
docs/trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
hooks/: commit-msg  pre-merge-commit
src/: cli.rs  config.rs  constants.rs  expense.rs  file_parser.rs  lib.rs  main.rs  models.rs  path.rs  sqlite_conn.rs  utils.rs
src/utils/: args_parser.rs  category.rs  expense.rs  file_parser.rs  path.rs  stdin_utils.rs  tags.rs
tests/: integration_test.rs
tests/resources/: mock_expenses.psv  pense.db
