[package]
name = "pense"
version = "0.7.2-alpha.0"
edition = "2024"
description = """
pense is a cli based tool to track expenses.
"""
readme = "README.md"
documentation = "https://purnamahesh.github.io/expense-tracker/"
homepage = "https://github.com/purnamahesh/expense-tracker"
repository = "https://github.com/purnamahesh/expense-tracker"
keywords = ["expense", "utility", "finance"]
categories = ["command-line-utilities"]
license-file = "LICENSE"
exclude = [
  "/.github/",
  "/hooks/",
  "/.gitignore",
  "/docs/",
  "*.sh",
  "test.sh",
  "VCS-README.md",
  "HOOKS-README.md",
  "ROADMAP.md",
  "docs-template.md",
  "tests/resources/"
]
autotests = false
rust-version = "1.91.0"

[dependencies]
chrono = { version = "0.4.42"}
clap = { version = "4.5.51", features = ["derive"] }
directories = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["macros", "derive", "runtime-tokio"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1.21.0", features = ["v4"] }

[features]
default = ["full"]

full = [
  "sqlx/sqlite"
]

lite = [
  "sqlx/sqlite-unbundled"
]

[dev-dependencies]
rstest = "0.26.1"
assert_cmd = "2.1.1"

[[test]]
name = "integration_test"
path = "tests/integration_test.rs"
